# lightspeed-rag-content

./: .gitignore  .gitleaks.toml  .syft.yaml  AGENTS.md  ARCHITECTURE.md  Containerfile  Containerfile.arm64  Containerfile.pack  Containerfile.tekton  Makefile  OWNERS  README.md  artifacts.lock.yaml  devfile.yaml  makefile  pdm.lock.cpu  pdm.lock.gpu  pyproject.toml  renovate.json  requirements-build.cpu.txt  requirements-build.txt  requirements.arm64.txt  requirements.cpu.txt  requirements.gpu.txt  requirements.hashes.source.cpu.txt  requirements.hashes.source.gpu.txt  requirements.hashes.wheel.cpu.txt  requirements.hashes.wheel.gpu.txt  requirements.hermetic.txt  requirements.overrides.gpu.txt  requirements.overrides.txt  requirements.txt  requirements_torch.txt  rpms.in.yaml  rpms.lock.yaml  ubi.repo
.ai/spec/: README.md  health-report.md
.ai/spec/how/: README.md  container-build.md  html-pipeline.md  lsc-library.md  plaintext-pipeline.md  project-structure.md
.ai/spec/what/: README.md  byok.md  container-build.md  content-sources.md  embedding-pipeline.md  system-overview.md
.tekton/: buildah-remote.yaml  dummy-lightspeed-rag-content-pull-request.yaml  dummy-lightspeed-rag-content-push.yaml  embed-rag.yaml  lightspeed-ocp-rag-pull-request.yaml  lightspeed-ocp-rag-push.yaml  lightspeed-rag-content-lsc-pull-request.yaml  lightspeed-rag-content-lsc-push.yaml  lightspeed-rag-content-pull-request.yaml  lightspeed-rag-content-push.yaml  lightspeed-rag-tool-pull-request.yaml  lightspeed-rag-tool-push.yaml  openshift-pipelines-lightspeed-rag-content-pull-request.yaml  openshift-pipelines-lightspeed-rag-content-push.yaml  own-app-lightspeed-rag-content-pull-request.yaml  own-app-lightspeed-rag-content-push.yaml
.tekton/integration-tests/: lightspeed-rag-content-image-verification.yaml
byok/: Containerfile.output  Containerfile.output.builder  Containerfile.tool  Makefile  README.md  document_processor.py  generate_embeddings_tool.py  metadata_processor.py  pyproject.toml  requirements.txt  rpms.in.yaml  rpms.lock.yaml
config/: exclude.conf
embeddings_model/: .gitattributes  README.md  config.json  config_sentence_transformers.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json  trainer_state.json
embeddings_model/1_Pooling/: config.json
lsc/: Containerfile.konflux  custom_processor.py  pyproject.toml  requirements.hashes.source.txt  requirements.hashes.wheel.txt  requirements.overrides.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml
lsc/scripts/: distance.py  download_embeddings_model.py  generate_packages_to_prefetch.py  get_runbooks.sh  query_rag.py  remove_pytorch_cpu_pyproject.py
lsc/scripts/asciidoctor-text/: convert-it-all.py  text-converter.rb
lsc/scripts/asciidoctor-text/4.17/: attributes.yaml
lsc/scripts/asciidoctor-text/4.18/: attributes.yaml
lsc/scripts/asciidoctor-text/4.19/: attributes.yaml
lsc/src/lightspeed_rag_content/: __init__.py  document_processor.py  metadata_processor.py  okp.py  utils.py
lsc/src/lightspeed_rag_content/asciidoc/: __init__.py  __main__.py  asciidoctor_converter.py
lsc/src/lightspeed_rag_content/asciidoc/ruby_asciidoc/: asciidoc_structure_dumper.rb
ocp-product-docs-plaintext/4.15/applications/: application-health.txt  config-maps.txt  idling-applications.txt  index.txt  odc-deleting-applications.txt  odc-editing-applications.txt  odc-exporting-applications.txt  odc-monitoring-project-and-application-metrics-using-developer-perspective.txt  odc-viewing-application-composition-using-topology-view.txt  pruning-objects.txt  red-hat-marketplace.txt  working-with-quotas.txt
ocp-product-docs-plaintext/4.15/architecture/: admission-plug-ins.txt  architecture-installation.txt  architecture-rhcos.txt  architecture.txt  control-plane.txt  index.txt  mce-overview-ocp.txt  nvidia-gpu-architecture-overview.txt  ocm-overview-ocp.txt  understanding-development.txt
ocp-product-docs-plaintext/4.15/authentication/: bound-service-account-tokens.txt  configuring-internal-oauth.txt  configuring-oauth-clients.txt  impersonating-system-admin.txt  index.txt  ldap-syncing.txt  managing-oauth-access-tokens.txt  managing-security-context-constraints.txt  remove-kubeadmin.txt  understanding-and-creating-service-accounts.txt  (+6 more)
openshift-pipelines/: Containerfile  Makefile
output/: bam-ibm_granite-13b-chat-v2_metadata.md  index_store.json
persist-dir/: metadata.json
questions/: openai-gpt-3.5-turbo_no_eval.json
scripts/: download_embeddings_model.py  embed-rag-content.sh  embed-remote-setup.sh  generate_embeddings.py  generate_packages_to_prefetch.py  get_ocp_plaintext_docs.sh  iterate_docstore.py  konflux_requirements.sh  layered_algorithm.py  query_rag.py  verify_rag_image_test.py
scripts/asciidoctor-text/: attributes.yaml  convert-it-all.py  text-converter.rb
scripts/doc_downloader/: downloader.py
scripts/html_chunking/: README.md  __init__.py  chunker.py  example.html  example.py  html-stripper.py  parser.py  test_chunker.py  tokenizer.py
scripts/html_embeddings/: README.md  chunk_html.py  download_docs.py  generate_embeddings.py  process_runbooks.py  setup.py  strip_html.py  test_html_embeddings.py  utils.py
scripts/portal-fetcher/: openshift-docs-downloader.py
src/: build.sh  dockerfile  embedding.py  evaluation.py  requirements.txt
src/llms/: llm_loader.py
src/models/: config.py
src/utils/: config.py
tekton/: README.md  kustomization.yaml
tekton/config/: pipeline-config.yaml
tekton/pipeline/: data-pipeline-v2.yaml  data-pipeline-v3.yaml  data-pipeline-v4.yaml  data-pipeline-v5.yaml  data-pipeline-v6.yaml  data-pipeline.yaml
tekton/scc/: secuirty-context.yaml
tekton/secrets/: default-service-account.yaml  git-ssh-secret.yaml  github-token.yaml  pipeline-service-account.yaml  secret-bam.yaml  secret-git.yaml  secret-openai.yaml  secret-quay.yaml  server-secret.yaml
tekton/tasks/: buildah.yaml  create-docker-file.yaml  create-github-release.yaml  embedding-v2.yaml  embedding.yaml  evaluation.yaml  generate-build-id.yaml  git-clone.yaml  limits.yaml  question-gen.yaml  sendmail.yaml
(+9869 files in other folders)
