[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "TRIO"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []

target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "types-requests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
cpu = [
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp311-cp311-linux_x86_64.whl#sha256=5b6ae523bfb67088a17ca7734d131548a2e60346c622621e4248ed09dd0790cc",
]
gpu = [
    "torch==2.6.0",
]

[project]
name = "lightspeed-rag-content"
version = "0.1.0"
description = "RAG content for OpenShift Lightspeed."
authors = []
dependencies = [
    "PyYAML",
    "huggingface_hub",
    "accelerate",
    "llama-index",
    "llama-index-vector-stores-faiss",
    "llama-index-embeddings-huggingface",
    "llama-index-readers-file",
    "faiss-cpu",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {file = "LICENSE"}
