[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "TRIO"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []

target-version = "py312"
lint.pydocstyle.convention = "google"
line-length = 100

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "types-requests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
cpu = [
    "torch @ https://packages.redhat.com/api/pulp-content/public-rhai/rhoai/3.3/cpu-ubi9/torch-2.9.1-4-cp312-cp312-linux_x86_64.whl#sha256=e42ab849b64444059f5eda352d61c9c3a078f30797e48e2972857182c9a00cf8",
]
gpu = [
    "torch==2.9.1",
]

[project]
name = "lightspeed-rag-content"
version = "0.1.0"
description = "RAG content for OpenShift Lightspeed."
authors = []
dependencies = [
    "PyYAML",
    "huggingface-hub<1.0",
    "accelerate",
    "llama-index-core",
    "llama-index-vector-stores-faiss",
    "llama-index-embeddings-huggingface",
    "llama-index-readers-file",
    "faiss-cpu",
    "python-frontmatter",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.10.0",
    "urllib3>=2.6.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {file = "LICENSE"}
