[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "TRIO"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []
lint.pydocstyle.convention = "google"

target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D104", "D100"]
"scripts/*" = ["S101"]

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lightspeed-rag-content"
version = "0.1.0"
description = "RAG content for OpenShift LightSpeed."
authors = []
dependencies = [
    "PyYAML==6.0.3",
    "huggingface_hub>=0.33.4",
    "llama-index==0.12.51",
    "llama-index-vector-stores-faiss==0.3.0",
    "llama-index-embeddings-huggingface==0.4.0",
    "llama-index-readers-file==0.4.11",
    "faiss-cpu==1.11.0.post1",
    "llama-index-vector-stores-postgres>=0.5.4",
    "torch==2.6.0",
    "llama-stack==0.2.16",
    "llama-stack-client==0.2.16",
    "aiosqlite==0.21.0",
    "sqlite-vec==0.1.6",
    "tomlkit",
]
requires-python = "==3.12.*"
dynamic = ["license", "readme"]

# PyTorch has multiple wheel variants for different backends - cpu, gpu, etc.
# By default on pypi.org is the gpu variant. Forces uv to use the cpu variant.
#[[tool.uv.index]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"
#explicit = true
#[tool.uv.sources]
#torch = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.12.4",
    "types-requests>=2.32.0.20240622",
    "pre-commit>=4.2.0",
    "coverage>=7.6.12",
    "huggingface-hub>=0.33.4",
    "radon>=6.0.1",
    "pyright>=1.1.401",
    "pylint>=3.3.7",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pylint."MESSAGES CONTROL"]
good-names = ["e"]
disable = ["R0902", "R0903", "R0913", "R0917", "W0621", "W0511"]
